--- a/Code and Data/Assignment.ipynb
+++ b/Code and Data/Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,14 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cleanup_data_values_return_float(data_in):\n",
+    "    \n",
+    "    message_error_string = \" is the datatype value in database, but it must be a floating point or integer\"\n",
     "\n",
     "    if type(data_in) is bool:\n",
-    "        raise RuntimeError(\"Datatype value in database is a boolean but it must be a floating point or integer\")\n",
+    "        raise RuntimeError(\"Boolean \" + message_error_string)\n",
     "\n",
     "    if type(data_in) is str:\n",
     "        data_in = data_in.replace(',','.')\n",
@@ -118,7 +120,7 @@
     "    try:\n",
     "        data_in = float(data_in)\n",
     "    except:\n",
-    "        raise RuntimeError(\"Datatype value in database is a string but it must be a floating point or integer\")\n",
+    "        raise RuntimeError(\"String \" + message_error_string)\n",
     "\n",
     "    return(float(data_in))"
    ]
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +149,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>7</th>\n      <th>9</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>NaN</td>\n      <td>Temperatures</td>\n      <td>Mass</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>NaN</td>\n      <td>USCS</td>\n      <td>USCS</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>NaN</td>\n      <td>°F</td>\n      <td>lb</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>NaN</td>\n      <td>32</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>NaN</td>\n      <td>200</td>\n      <td>2000</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "     0             7     9\n0  NaN  Temperatures  Mass\n1  NaN          USCS  USCS\n2  NaN            °F    lb\n3  NaN            32     0\n4  NaN           200  2000"
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +191,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Supplier A temperatures</th>\n      <th>Supplier A mass</th>\n    </tr>\n    <tr>\n      <th>Supplier A 12NC</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>402255334708</td>\n      <td>15.000000</td>\n      <td>89.811289</td>\n    </tr>\n    <tr>\n      <td>402258698328</td>\n      <td>1.111111</td>\n      <td>183.704910</td>\n    </tr>\n    <tr>\n      <td>402249767239</td>\n      <td>25.000000</td>\n      <td>698.985842</td>\n    </tr>\n    <tr>\n      <td>402235950496</td>\n      <td>55.000000</td>\n      <td>311.617958</td>\n    </tr>\n    <tr>\n      <td>402264653803</td>\n      <td>85.555556</td>\n      <td>306.174850</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "                 Supplier A temperatures  Supplier A mass\nSupplier A 12NC                                          \n402255334708                   15.000000        89.811289\n402258698328                    1.111111       183.704910\n402249767239                   25.000000       698.985842\n402235950496                   55.000000       311.617958\n402264653803                   85.555556       306.174850"
      },
-     "execution_count": 58,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +240,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>7</th>\n      <th>9</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>NaN</td>\n      <td>Temperatures</td>\n      <td>Mass</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>NaN</td>\n      <td>USCS</td>\n      <td>USCS</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>NaN</td>\n      <td>F</td>\n      <td>lb</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>NaN</td>\n      <td>80</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>NaN</td>\n      <td>24</td>\n      <td>2000</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "     0             7     9\n0  NaN  Temperatures  Mass\n1  NaN          USCS  USCS\n2  NaN             F    lb\n3  NaN            80     0\n4  NaN            24  2000"
      },
-     "execution_count": 65,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +248,7 @@
    "source": [
     "# import\n",
     "df_import_supplier_B = pd.DataFrame()\n",
-    "df_import_supplier_B = pd.read_csv(\"DataB.csv\", header=None, sep=';', encoding='utf-8', low_memory=False)\n",
+    "df_import_supplier_B = pd.read_csv(\"DataB.csv\", header=None, sep=';', encoding='utf-8', low_memory=False,dtype=str)\n",
     "\n",
     "# Clean up the database\n",
     "# drop column\n",
@@ -259,13 +261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "Supplier A temperatures  Supplier A mass\nSupplier A 12NC                                          \n402255334708                   15.000000        89.811289\n402258698328                    1.111111       183.704910\n402249767239                   25.000000       698.985842\n402235950496                   55.000000       311.617958\n402264653803                   85.555556       306.174850\n...                                  ...              ...\n402245489916                   68.888889       141.520819\n402255946517                   36.111111       738.901971\n402262790749                   47.777778       286.216785\n402278043281                   48.333333       801.044125\n402212761490                   35.555556       360.605934\n\n[199994 rows x 2 columns]\n"
+     "text": "Supplier A temperatures  Supplier A mass Supplier B 12NC  \\\nSupplier A 12NC                                                             \n402255334708                   15.000000        89.811289             nan   \n402258698328                    1.111111       183.704910             nan   \n402249767239                   25.000000       698.985842             nan   \n402235950496                   55.000000       311.617958             nan   \n402264653803                   85.555556       306.174850             nan   \n...                                  ...              ...             ...   \n402245489916                   68.888889       141.520819             nan   \n402255946517                   36.111111       738.901971             nan   \n402262790749                   47.777778       286.216785             nan   \n402278043281                   48.333333       801.044125             nan   \n402212761490                   35.555556       360.605934             nan   \n\n                 Supplier B temperatures  Supplier B mass  \nSupplier A 12NC                                            \n402255334708                         NaN              NaN  \n402258698328                         NaN              NaN  \n402249767239                         NaN              NaN  \n402235950496                         NaN              NaN  \n402264653803                         NaN              NaN  \n...                                  ...              ...  \n402245489916                         NaN              NaN  \n402255946517                         NaN              NaN  \n402262790749                         NaN              NaN  \n402278043281                         NaN              NaN  \n402212761490                         NaN              NaN  \n\n[199994 rows x 5 columns]\n"
     }
    ],
    "source": [
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -285,10 +287,10 @@
     },
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Supplier A temperatures</th>\n      <th>Supplier A mass</th>\n      <th>Supplier B 12NC</th>\n      <th>Supplier B temperatures</th>\n      <th>Supplier B mass</th>\n    </tr>\n    <tr>\n      <th>Supplier A 12NC</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>402255334708</td>\n      <td>15.000000</td>\n      <td>89.811289</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>402258698328</td>\n      <td>1.111111</td>\n      <td>183.704910</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>402249767239</td>\n      <td>25.000000</td>\n      <td>698.985842</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>402235950496</td>\n      <td>55.000000</td>\n      <td>311.617958</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>402264653803</td>\n      <td>85.555556</td>\n      <td>306.174850</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "                 Supplier A temperatures  Supplier A mass Supplier B 12NC  \\\nSupplier A 12NC                                                             \n402255334708                   15.000000        89.811289             NaN   \n402258698328                    1.111111       183.704910             NaN   \n402249767239                   25.000000       698.985842             NaN   \n402235950496                   55.000000       311.617958             NaN   \n402264653803                   85.555556       306.174850             NaN   \n\n                 Supplier B temperatures  Supplier B mass  \nSupplier A 12NC                                            \n402255334708                         NaN              NaN  \n402258698328                         NaN              NaN  \n402249767239                         NaN              NaN  \n402235950496                         NaN              NaN  \n402264653803                         NaN              NaN  "
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Supplier A temperatures</th>\n      <th>Supplier A mass</th>\n      <th>Supplier B 12NC</th>\n      <th>Supplier B temperatures</th>\n      <th>Supplier B mass</th>\n    </tr>\n    <tr>\n      <th>Supplier A 12NC</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>402255334708</td>\n      <td>15.000000</td>\n      <td>89.811289</td>\n      <td>nan</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>402258698328</td>\n      <td>1.111111</td>\n      <td>183.704910</td>\n      <td>nan</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>402249767239</td>\n      <td>25.000000</td>\n      <td>698.985842</td>\n      <td>nan</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>402235950496</td>\n      <td>55.000000</td>\n      <td>311.617958</td>\n      <td>nan</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>402264653803</td>\n      <td>85.555556</td>\n      <td>306.174850</td>\n      <td>nan</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                 Supplier A temperatures  Supplier A mass Supplier B 12NC  \\\nSupplier A 12NC                                                             \n402255334708                   15.000000        89.811289             nan   \n402258698328                    1.111111       183.704910             nan   \n402249767239                   25.000000       698.985842             nan   \n402235950496                   55.000000       311.617958             nan   \n402264653803                   85.555556       306.174850             nan   \n\n                 Supplier B temperatures  Supplier B mass  \nSupplier A 12NC                                            \n402255334708                         NaN              NaN  \n402258698328                         NaN              NaN  \n402249767239                         NaN              NaN  \n402235950496                         NaN              NaN  \n402264653803                         NaN              NaN  "
      },
-     "execution_count": 66,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,26 +316,29 @@
     "    if col > 0:\n",
     "        df_products[new_col_name] = df_products[new_col_name].apply(lambda x : cleanup_data_values_return_float(x))\n",
     "        df_products[new_col_name] = df_products[new_col_name].apply(lambda x : convert_units_from_dict(dict_unit_hardcoded, unit_subject, unit_system, unit_specs, x))\n",
+    "        \n",
+    "    elif col == 0:\n",
+    "        df_products[new_col_name] = df_products[new_col_name].apply(lambda x : str(x).replace('.',''))\n",
     "\n",
     "df_products.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "Supplier A temperatures        30\nSupplier A mass            68.946\nSupplier B 12NC               NaN\nSupplier B temperatures       NaN\nSupplier B mass               NaN\nName: 402236436631, dtype: object"
+      "text/plain": "0    402261157747\n7     74,14683407\n9            1575\nName: 10, dtype: object"
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_products.iloc[10]"
+    "df_import_supplier_B.iloc[10]"
    ]
   },
   {
