added hyperlinks in comment lines

--- a/Code and Data/Assignment.ipynb
+++ b/Code and Data/Assignment.ipynb
@@ -987,7 +987,7 @@
     "elif storing_filesystem == 'parquet':\n",
     "    # parquet, https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.to_parquet.html\n",
     "    df_import.to_parquet(\n",
-    "        (filepath_for_storing_the_cleaned_database + ''),\n",
+    "        (filepath_for_storing_the_cleaned_database),\n",
     "        engine='auto',\n",
     "        compression='snappy',\n",
     "        index=None,\n",
@@ -1055,11 +1055,20 @@
     "        low_memory=False\n",
     "    )\n",
     "\n",
-    "# merge\n",
+    "# merge, https://pandas.pydata.org/pandas-docs/stable/user_guide/merging.html\n",
     "df_main = pd.concat([df_main, df_import], ignore_index=True, sort=False)\n",
     "\n",
     "# store file to database\n",
-    "df_main.to_csv(filepath_of_csv_of_main_database, index=False, header=True, sep=';', encoding='UTF-8')\n",
+    "df_main.to_csv(\n",
+    "        filepath_of_csv_of_main_database,\n",
+    "        index=False, \n",
+    "        header=True, \n",
+    "        sep=';', \n",
+    "        mode = 'w',\n",
+    "        compression = 'infer',\n",
+    "        encoding='UTF-8',\n",
+    "        decimal = '.'\n",
+    "    )\n",
     "\n",
     "df_main.head(10)"
    ]
